--- a/Actualizar_BD/Actualizar_BD/Actualizar_BD.vbproj
+++ b/Actualizar_BD/Actualizar_BD/Actualizar_BD.vbproj
@@ -47,6 +47,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
