--- a/Actualizar_BD/Actualizar_BD/Actualizar_BD.vbproj
+++ b/Actualizar_BD/Actualizar_BD/Actualizar_BD.vbproj
@@ -125,7 +125,9 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\report.png" />
