--- a/centro medico/centro medico.vbproj
+++ b/centro medico/centro medico.vbproj
@@ -2426,6 +2426,8 @@
     <Content Include="Scripts\db_0.0.0.1.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\db_0.0.0.2.sql" />
+    <Content Include="Scripts\db_0.0.0.3.sql" />
     <Content Include="Scripts\db_1.0.3.7.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -2586,12 +2588,6 @@
     <Content Include="Resources\textAreaResizeCorner.png" />
     <None Include="Resources\yellow_plus.jpg" />
     <None Include="Resources\yellow_cross.jpg" />
-    <Content Include="Scripts\db_0.0.0.2.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Scripts\db_0.0.0.3.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Scripts\db_1.0.1.7.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -3850,7 +3846,9 @@
     <None Include="Logica\CMDataSet.xss">
       <DependentUpon>CMDataSet.xsd</DependentUpon>
     </None>
-    <BaseApplicationManifest Include="My Project\app.manifest" />
+    <BaseApplicationManifest Include="My Project\app.manifest">
+      <SubType>Designer</SubType>
+    </BaseApplicationManifest>
     <None Include="Logica\CMLinq.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>CMLinq.designer.vb</LastGenOutput>
