--- a/centro medico/app.config
+++ b/centro medico/app.config
@@ -10,7 +10,7 @@
 		</sectionGroup>
 	</configSections>
 		<connectionStrings>
-    <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=DAW-JBLANCO\MSSQLSERVERLOCAL;Initial Catalog=newsiesta1;User ID=sa;Password=Admin123"
+    <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=PC2-NUEVO\GOLTRATEC;Initial Catalog=siesta;User ID=sa;Password=goltra0121"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 		<system.diagnostics>
