--- a/centro medico/My Project/Settings.settings
+++ b/centro medico/My Project/Settings.settings
@@ -17,10 +17,18 @@
     <Setting Name="CMConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=PC2-NUEVO\GOLTRATEC;Initial Catalog=siesta;User ID=sa;Password=goltra0121&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=localhost;Initial Catalog=siesta;User ID=sa;Password=Admin123&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=PC2-NUEVO\GOLTRATEC;Initial Catalog=siesta;User ID=sa;Password=goltra0121</Value>
+      <Value Profile="(Default)">Data Source=localhost;Initial Catalog=siesta;User ID=sa;Password=Admin123</Value>
+    </Setting>
+    <Setting Name="siestaConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=localhost;Initial Catalog=siesta;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=localhost;Initial Catalog=siesta;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
