--- a/centro medico/app.config
+++ b/centro medico/app.config
@@ -10,7 +10,10 @@
 		</sectionGroup>
 	</configSections>
 		<connectionStrings>
-    <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=localhost;Initial Catalog=siesta1;User ID=sa;Password=Admin123"
+    <add name="centro_medico.My.MySettings.CMConnectionString" connectionString="Data Source=localhost;Initial Catalog=siesta;User ID=sa;Password=Admin123"
+      providerName="System.Data.SqlClient" />
+    <add name="centro_medico.My.MySettings.siestaConnectionString"
+      connectionString="Data Source=localhost;Initial Catalog=siesta;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 		<system.diagnostics>
