Ajuste del reporte de listado de citas

--- a/centro medico/centro medico.vbproj
+++ b/centro medico/centro medico.vbproj
@@ -3044,6 +3044,9 @@
     <Content Include="RDLC\custom\vistalegre\Factura.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="RDLC\custom\siesta\CitaJustificanteAsistencia.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="RDLC\default\PacientesComoNosConocio.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
