--- a/Actualizar_BD/Actualizar_BD/App.config
+++ b/Actualizar_BD/Actualizar_BD/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <connectionStrings>
-      <add name="CMConnectionString" connectionString="Data Source=DESKTOP-BOCU0R8; User ID=sa; Password=Admin123"
+      <add name="CMConnectionString" connectionString="Data Source=localhost; User ID=sa; Password=Admin123"
         providerName="System.Data.SqlClient" />
     </connectionStrings>
 
