--- a/centro medico/centro medico.vbproj
+++ b/centro medico/centro medico.vbproj
@@ -2460,8 +2460,12 @@
     <Content Include="Scripts\db_0.0.0.1.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\db_0.0.0.2.sql" />
-    <Content Include="Scripts\db_0.0.0.3.sql" />
+    <Content Include="Scripts\db_0.0.0.2.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\db_0.0.0.3.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\db_1.0.3.7.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -2480,7 +2484,9 @@
     <Content Include="Scripts\db_1.0.3.6.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\db_1.0.3.7.sql" />
+    <Content Include="Scripts\db_1.0.3.7.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\db_1.0.3.8.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -2497,9 +2503,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\db_1.0.4.3.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\db_1.0.4.4.sql" />
+    <Content Include="Scripts\db_1.0.4.4.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="UI\Dental\Icons\confirmado.ico" />
     <Content Include="UI\Dental\Icons\confirmado.png" />
     <Content Include="UI\Dental\Icons\confirmado_urgente.ico" />
@@ -3163,21 +3171,21 @@
     <Content Include="RDLC\custom\mercedes\Mercedes_tto qx tumor maligno.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <EmbeddedResource Include="Scripts\db_1.0.1.6.sql">
+    <Content Include="Scripts\db_1.0.1.6.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </Content>
     <None Include="My Project\DataSources\HorarioEntry.datasource" />
     <None Include="My Project\DataSources\HorarioEntryCollection.datasource" />
     <None Include="My Project\DataSources\Horario_Medico.datasource" />
     <None Include="My Project\DataSources\N_Poblacione.datasource" />
     <None Include="Resources\Excel-icon.png" />
     <None Include="Resources\undo_blue.png" />
-    <EmbeddedResource Include="Scripts\db_1.0.1.4.sql">
+    <Content Include="Scripts\db_1.0.1.4.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\db_1.0.1.5.sql">
+    </Content>
+    <Content Include="Scripts\db_1.0.1.5.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </Content>
     <None Include="My Project\DataSources\CLINICAINCEME.datasource" />
     <None Include="My Project\DataSources\Comunicacion.datasource" />
     <None Include="My Project\DataSources\CONCEPTOSFACTURABLE1.datasource" />
@@ -3234,12 +3242,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <None Include="Resources\communication.png" />
-    <EmbeddedResource Include="Scripts\db_1.0.1.3.sql">
+    <Content Include="Scripts\db_1.0.1.3.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\db_1.0.1.2.sql">
+    </Content>
+    <Content Include="Scripts\db_1.0.1.2.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </Content>
     <EmbeddedResource Include="controles\add_delete_control.resx">
       <SubType>Designer</SubType>
       <DependentUpon>add_delete_control.vb</DependentUpon>
@@ -4143,15 +4151,15 @@
     <None Include="Resources\inceme.ico" />
     <None Include="Resources\inceme.png" />
     <None Include="Resources\inceme.jpg" />
-    <EmbeddedResource Include="Scripts\db_1.0.0.7.sql">
+    <Content Include="Scripts\db_1.0.0.7.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\DB_1.0.0.1.sql">
+    </Content>
+    <Content Include="Scripts\DB_1.0.0.1.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\db_1.0.0.2.sql">
+    </Content>
+    <Content Include="Scripts\db_1.0.0.2.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </Content>
     <None Include="Resources\icon-update.gif" />
     <None Include="Resources\probeta.jpg" />
     <None Include="Resources\stack 2.png" />
@@ -4189,17 +4197,17 @@
     <Content Include="RDLC\default\Derivacion.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <EmbeddedResource Include="Scripts\db_1.0.0.3.sql">
+    <Content Include="Scripts\db_1.0.0.3.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\db_1.0.0.4.sql">
+    </Content>
+    <Content Include="Scripts\db_1.0.0.4.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\db_1.0.0.5.sql">
+    </Content>
+    <Content Include="Scripts\db_1.0.0.5.sql">
       <SubType>
       </SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </Content>
     <None Include="Logica\CMLinq.dbml.layout">
       <DependentUpon>CMLinq.dbml</DependentUpon>
       <SubType>Designer</SubType>
@@ -4758,21 +4766,21 @@
     <Content Include="RDLC\default\AuditoriasListado.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <EmbeddedResource Include="Scripts\db_1.0.0.6.sql">
+    <Content Include="Scripts\db_1.0.0.6.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\db_1.0.0.8.sql">
+    </Content>
+    <Content Include="Scripts\db_1.0.0.8.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\db_1.0.0.9.sql">
+    </Content>
+    <Content Include="Scripts\db_1.0.0.9.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\db_1.0.1.0.sql">
+    </Content>
+    <Content Include="Scripts\db_1.0.1.0.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scripts\db_1.0.1.1.sql">
+    </Content>
+    <Content Include="Scripts\db_1.0.1.1.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </Content>
     <EmbeddedResource Include="Resources\MISC18.ICO" />
     <EmbeddedResource Include="UI\Admin\frmRoles.resx">
       <SubType>Designer</SubType>
