--- a/centro medico/centro medico.vbproj
+++ b/centro medico/centro medico.vbproj
@@ -3065,6 +3065,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="RDLC\custom\regos\DentalPresupuesto.rdlc" />
+    <Content Include="RDLC\custom\siesta\Consentimiento.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="RDLC\default\PacientesComoNosConocio.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
