--- a/centro medico/centro medico.vbproj
+++ b/centro medico/centro medico.vbproj
@@ -3066,7 +3066,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="RDLC\custom\regos\DentalPresupuesto.rdlc" />
-    <EmbeddedResource Include="RDLC\custom\siesta\TalonesSocioPrime.rdlc" />
+    <EmbeddedResource Include="RDLC\custom\siesta\TalonesSocioPrime.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="RDLC\default\PacientesComoNosConocio.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
